--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -1,3 +1,9 @@
 ## Abstract {.page_break_before}
 
 
+Predicting common functionality between homologous genes/proteins has been a crucial effort for many biological studies.
+On the basis of general orthology conjecture, functions of orthologous proteins are likely to be closer to each other relative to of paralogs. 
+On the other hand, extensive gene duplications and losses give rise to complex evolutionary patterns limiting our ability to interpret function-wise comparisons. 
+Especially within co-orthologs, relationships cannot be specified further as lineage-specific events are independent of the neighboring clades. 
+However, if a gene was essential for ancestral fitness, after duplication, one of the paralogs tends to remain preserved while the other copy often diverges. 
+Here, I propose phylogeny-based methods to identify, if exists, the common ancestral version of paralogs with the aim of delineating functional equivalence between co-orthologous proteins. 
